framec_tests/language_specific/c/v3_outline/negative/pending/missing_brace.frm
@target c

system S {
    actions:
        fn doIt() 
}
